added more examples, updated gradle, added gradle xpdustry publishing